feat(content): add responsive skills section with core stack, cloud infra, and database expertise

--- a/index.html
+++ b/index.html
@@ -121,6 +121,89 @@
 <!-- Main Content Section -->
 <div class="max-w-4xl mx-auto px-4 py-16" id="main-content">
 
+    <!-- Skills Section -->
+    <section class="mb-20">
+        <h2 class="md:text-2xl text-xl font-mono mb-8">~/skills</h2>
+        <div class="p-6 border rounded-lg">
+            <div class="grid gap-8 md:grid-cols-2">
+                <!-- Core Languages -->
+                <div>
+                    <div class="flex items-center mb-4">
+                        <span class="text-primary font-mono mr-2">[languages]</span>
+                        <h3 class="font-medium">Core Stack</h3>
+                    </div>
+                    <ul class="space-y-3">
+                        <li class="flex justify-between items-center">
+                            <span>C#/.NET (2.0 → 8)</span>
+                            <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">12+yrs</span>
+                        </li>
+                        <li class="flex justify-between items-center">
+                            <span>Java 11 <span class="text-xs text-emerald-600">(OCP Certified)</span></span>
+                            <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">3yrs</span>
+                        </li>
+                        <li class="flex justify-between items-center">
+                            <span>Rust</span>
+                            <span class="font-mono text-xs bg-orange-500/10 px-2 py-1 rounded text-orange-500">active learning</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Cloud & DevOps -->
+                <div>
+                    <div class="flex items-center mb-4">
+                        <span class="text-primary font-mono mr-2">[devops]</span>
+                        <h3 class="font-medium">Cloud Infrastructure</h3>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded text-center">AWS Lambda</span>
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded text-center">Azure DevOps</span>
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded text-center">Docker</span>
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded text-center">GitLab CI</span>
+                    </div>
+                </div>
+
+                <!-- Database Mastery -->
+                <div>
+                    <div class="flex items-center mb-4">
+                        <span class="text-primary font-mono mr-2">[data]</span>
+                        <h3 class="font-medium">Database Systems</h3>
+                    </div>
+                    <ul class="space-y-2">
+                        <li class="flex items-center">
+                            <span class="mr-2">■</span>
+                            <span>SQL Server (T-SQL)</span>
+                            <span class="ml-2 font-mono text-xs bg-primary/10 px-2 rounded">Entity Framework</span>
+                        </li>
+                        <li class="flex items-center">
+                            <span class="mr-2">■</span>
+                            <span>MongoDB</span>
+                            <span class="ml-2 font-mono text-xs bg-primary/10 px-2 rounded">NoSQL Design</span>
+                        </li>
+                        <li class="flex items-center">
+                            <span class="mr-2">■</span>
+                            <span>PostgreSQL/MySQL</span>
+                            <span class="ml-2 font-mono text-xs bg-primary/10 px-2 rounded">ETL Optimization</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Architectural Patterns -->
+                <div>
+                    <div class="flex items-center mb-4">
+                        <span class="text-primary font-mono mr-2">[arch]</span>
+                        <h3 class="font-medium">Key Expertise</h3>
+                    </div>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">Legacy Modernization</span>
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">High-Performance APIs</span>
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">Distributed Systems</span>
+                        <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">Data Compression</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- SchemaShroud Project Section -->
     <section class="mb-20">
         <h2 class="md:text-2xl text-xl font-mono mb-8">~/projects/schema_shroud</h2>
